style: Modify comments
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>