@@ -27,29 +27,23 @@
 
 package com.tlcsdm.core.javafx.factory;
 
+import cn.hutool.log.StaticLog;
+
 import java.lang.ref.WeakReference;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
-/**
- * 　@description: 单例工厂
- * 　@author secret
- * 　@date 2021/1/5 19:43
- */
 public class SingletonFactory {
-    @SuppressWarnings("rawtypes")
-    private static Map<Class, Object> instaces = new ConcurrentHashMap<Class, Object>();
-    @SuppressWarnings("rawtypes")
-    private static Map<Class, WeakReference<Object>> weakReferenceInstaces = new ConcurrentHashMap<Class, WeakReference<Object>>();
+
+    private static final Map<Class<?>, Object> instaces = new ConcurrentHashMap<>();
+
+    private static final Map<Class<?>, WeakReference<Object>> weakReferenceInstaces = new ConcurrentHashMap<>();
 
     /**
-     * 创建可不被回收的单例模式,当没有对象引用，单例对象将被gc掉
+     * 创建可不被回收的单例模式,当没有对象引用，单例对象将被gc掉.
      *
-     * @param className
-     * @return
-     * @throws InstantiationException
-     * @throws IllegalAccessException
+     * @param className Class Name
      */
     @SuppressWarnings("unchecked")
     public static <E> E getInstace(Class<E> className) {
@@ -59,11 +53,10 @@ public class SingletonFactory {
                 instace = instaces.get(className);
                 if (instace == null) {
                     try {
-                        instace = className.newInstance();
-                    } catch (InstantiationException e) {
-                        e.printStackTrace();
-                    } catch (IllegalAccessException e) {
-                        e.printStackTrace();
+                        instace = className.getDeclaredConstructor().newInstance();
+                    } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
+                             NoSuchMethodException e) {
+                        StaticLog.error(e);
                     }
                     instaces.put(className, instace);
                 }
@@ -73,12 +66,9 @@ public class SingletonFactory {
     }
 
     /**
-     * 创建可回收的单例模式,当没有对象引用，单例对象将被gc掉
+     * 创建可回收的单例模式,当没有对象引用，单例对象将被gc掉.
      *
-     * @param className
-     * @return
-     * @throws InstantiationException
-     * @throws IllegalAccessException
+     * @param className Class Name
      */
     @SuppressWarnings("unchecked")
     public static <E> E getWeakInstace(Class<E> className) {
@@ -91,18 +81,11 @@ public class SingletonFactory {
                 if (instace == null) {
                     try {
                         instace = className.getDeclaredConstructor().newInstance();
-                    } catch (InstantiationException e) {
-                        // TODO Auto-generated catch block
-                        e.printStackTrace();
-                    } catch (IllegalAccessException e) {
-                        // TODO Auto-generated catch block
-                        e.printStackTrace();
-                    } catch (NoSuchMethodException e) {
-                        e.printStackTrace();
-                    } catch (InvocationTargetException e) {
-                        e.printStackTrace();
+                    } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                             InvocationTargetException e) {
+                        StaticLog.error(e);
                     }
-                    weakReferenceInstaces.put(className, new WeakReference<Object>(instace));
+                    weakReferenceInstaces.put(className, new WeakReference<>(instace));
                 }
             }
         }
